--- a/config.yaml
+++ b/config.yaml
@@ -4,9 +4,11 @@ system:
 
 zap:
   level: info
-  format: json
+  format: console
+  prefix: '[紫讯科技]'
   director: log
   link-name: latest_log
   showLine: true
   encode-level: LowercaseColorLevelEncoder
   stacktrace-key: stacktrace
+
